--- a/NgoXuanLoc/kho.css
+++ b/NgoXuanLoc/kho.css
@@ -9,7 +9,8 @@ body {
     color: #333;
     margin: 0 auto;
 }
-/*header-----------------------------------------------------------*/
+/*header*/
+
 header {
     background-color: #082b53;
     color: white;
