--- a/NgoXuanLoc/test1.css
+++ b/NgoXuanLoc/test1.css
@@ -152,6 +152,7 @@ footer {
     font-weight: bold;
     font-size: 18px;
     transition: background-color 0.3s ease;
+    -webkit-user-select: none;
     user-select: none;
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 3px;
