--- a/NgoXuanLoc/test1.css
+++ b/NgoXuanLoc/test1.css
@@ -117,6 +117,7 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
+    position: relative;
 }
 .slideshow-container {
     position: relative;
@@ -179,4 +180,43 @@ footer {
 }
 .active, .dot:hover {
     background-color: #717171;
+}
+/*6 anh mau*/
+.product-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    max-width: 800px;
+    margin: auto;
+    cursor: pointer;
+}
+.product {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.product img {
+    max-width: 100%;
+    border-radius: 10px;
+}
+.product-name {
+    margin: 10px 0;
+    font-size: 18px;
+    font-weight: bold;
+    min-height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.product-name:hover{
+    color: #0056b3;
+}
+.product-price {
+    font-size: 16px;
+    color: #e67e22;
 }
