--- a/NgoXuanLoc/test1.css
+++ b/NgoXuanLoc/test1.css
@@ -22,12 +22,11 @@ header {
 header .logo {
     margin-left: 20px;
 }
-header .logo h1 {
-    text-align: left;
-    font-size: 40px;
-    margin: 0;
-    font-family: 'Script Fonts';
-    font-weight: bold;
+header .logo-img{
+        max-width: 100%;
+        height: 60px;
+        object-fit: contain;
+    
 }
 nav a.home {
     color: #fff;
@@ -119,6 +118,7 @@ footer {
     bottom: 0;
     position: relative;
 }
+/*Slide show*/
 .slideshow-container {
     position: relative;
     max-width: 960px;
@@ -181,7 +181,7 @@ footer {
 .active, .dot:hover {
     background-color: #717171;
 }
-/*6 anh mau*/
+/*6 ảnh áo*/
 .product-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
