--- a/NgoXuanLoc/test1.css
+++ b/NgoXuanLoc/test1.css
@@ -115,7 +115,7 @@ footer {
     padding: 20px;
     color: white;
     width: 100%;
-    position: fixed;
+    position: relative;
     bottom: 0;
 
 }
