--- a/NgocHoangBa/layoutsmain.css
+++ b/NgocHoangBa/layoutsmain.css
@@ -9,6 +9,9 @@ body {
     color: #333;
     margin: 0 auto;
 }
+body-nav{
+    font-size: 20px;
+}
 /* Header */
 header {
     background-color: #0050ac;
