--- a/DiepVanDinh/styleall.css
+++ b/DiepVanDinh/styleall.css
@@ -34,7 +34,9 @@
   display: inline-block;
   width: 60px;
   height: 34px;
+  
 }
+
 
 /* Hide default HTML checkbox */
 .switch input {
@@ -89,4 +91,16 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.carousel-item img {
+  width: 100%;         
+  height: 500px;      
+  object-fit: cover;    
+  margin: 20px auto;      
+}
+
+.carousel {
+  max-width: 1200px;
+  margin: 0 auto;
 }
