--- a/DiepVanDinh/nhansu.css
+++ b/DiepVanDinh/nhansu.css
@@ -35,7 +35,7 @@ select, button {
 }
 
 button {
-    background-color: #28a745;
+    background-color: #909c91;
     color: white;
     cursor: pointer;
 }
@@ -53,7 +53,7 @@ th, td {
 }
 
 th {
-    background-color: #4CAF50;
+    background-color: #909c91;
     color: white;
 }
 
