--- a/DiepVanDinh/layoutsmain.css
+++ b/DiepVanDinh/layoutsmain.css
@@ -9,27 +9,26 @@ body {
     color: #333;
     margin: 0 auto;
 }
-.tongquan .bg-body-tertiary, .tongquan .text-bg-primary, .tongquan .text-bg-dark { /*Thay đổi selector cho chính xác hơn*/
-    width: 45%; /* hoặc một giá trị khác phù hợp với bố cục */
-    margin: 1rem; /* Khoảng cách giữa các ảnh */
-    overflow: hidden; /* Ẩn phần ảnh thừa nếu cần */
+.tongquan .bg-body-tertiary, .tongquan .text-bg-primary, .tongquan .text-bg-dark {
+    width: 45%;
+    margin: 1rem;
+    overflow: hidden;
 }
 
 .tongquan img {
-    width: 100%; /* Ảnh chiếm toàn bộ chiều rộng của container */
-    height: auto; /* Chiều cao tự động điều chỉnh theo tỉ lệ */
-    object-fit: cover; /* Bao phủ toàn bộ container, có thể cắt xén ảnh */
-    object-fit: contain;  /* Hiển thị toàn bộ ảnh, có thể có khoảng trắng */
+    width: 100%; 
+    height: auto; 
+    object-fit: cover;
+    object-fit: contain;
 }
 
 @media (max-width: 768px) {
     .tongquan .bg-body-tertiary, .tongquan .text-bg-primary, .tongquan .text-bg-dark {
-        width: 95%; /* Chiếm gần hết chiều rộng trên màn hình nhỏ */
-        margin: 0.5rem auto; /* Căn giữa ảnh */
+        width: 95%;
+        margin: 0.5rem auto;
     }
 }
 footer{
     color: white;
 }
-
 
